Additions/changes to the video conversion process
Webm opus/vp8 video does not get reencoded for now (dev. purposes).
Applying simple conversion parameters creates and loads a 10s sample.
Various fixes to pipelines.
Regenerated API client code.
